# VScode_Docker_Stm32

./: README.md  docker-install-ubuntu.sh
.github/workflows/: Push_firmware_to_master.yml
firmware/: .astylerc  .gitignore  CMakeLists.txt  WSpace.code-workspace
firmware/.devcontainer/: Dockerfile  devcontainer.json
firmware/A/: CMakeLists.txt
firmware/A/App/: App_cube.ioc  CMakeLists.txt  startup_stm32f334x8_custom.s
firmware/A/App/Core/Inc/: main.h  stm32f3xx_hal_conf.h
firmware/A/App/Core/Src/: gpio.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
firmware/A/App/User/Inc/: ManagerDWT.h  logger.h  mainUser.h  pid_.h  settings.h
firmware/A/App/User/Src/: logger.c  mainUser.c  pid_.c  settings.c
firmware/A/General/Inc/: defines.h
firmware/A/General/Src/: swv.c
firmware/A/cmake/: BuildInfo.cmake  Cleaning.cmake  ProjectConfiguration.cmake  STM32F334R8Tx_FLASH.ld.in  stm32.cmake
firmware/B/: CMakeLists.txt
firmware/B/App/: App_cube.ioc  CMakeLists.txt
firmware/B/App/Core/Src/: main.c
firmware/B/App/User/Inc/: mainUser.h
firmware/B/App/User/Src/: logger.c  mainUser.c
firmware/B/Boot/: Boot_cube.ioc  CMakeLists.txt
firmware/B/Boot/Core/Src/: main.c
firmware/B/General/Inc/: swv.h
firmware/B/General/Src/: swv.c
firmware/B/cmake/: Cleaning.cmake  ProjectConfiguration.cmake  STM32F103C8Tx_FLASH.ld.in  build_info.c.in  build_info.h.in  stm32.cmake
firmware/Test/: CMakeLists.txt  UT_pid.cpp  run.sh
firmware/Test/Core/Inc/: _ansi.h  graphs.hpp  test_core.hpp
firmware/Test/Core/Src/: test_core.cpp
firmware/Test/cmake/: CompilerSelector.cmake  CompilerSettings.cmake
firmware/cmake/: Astyle.cmake  GlobalDefines.cmake  arm_CompilerSettings.cmake  arm_toolchain.cmake  astyle_changes.sh
firmware/cmake/vscode/: launch.json.in  tasks.json.in  vscode.cmake
firmware/openocd/: STM32F103xx.cfg  STM32F334.cfg  STM32F334.svd
stm32f745_prj_gpp/: .gitignore  CMakeLists.txt  STM32F745ZGTx_FLASH.ld.in  cmake-variants.json
stm32f745_prj_gpp/.devcontainer/: Dockerfile  devcontainer.json
stm32f745_prj_gpp/App/: App.cmake  CubeMX.ioc
stm32f745_prj_gpp/App/Core/Inc/: main.h
stm32f745_prj_gpp/App/Core/Src/: gpio.c  main.c
stm32f745_prj_gpp/App/Lib/SecToMSec/Inc/: SecToMSec.hpp
stm32f745_prj_gpp/App/Lib/SecToMSec/Src/: SecToMSec.cpp
stm32f745_prj_gpp/App/User/Inc/: mainUser.hpp
stm32f745_prj_gpp/App/User/Src/: mainUser.cpp
stm32f745_prj_gpp/Boot/: Boot.cmake
stm32f745_prj_gpp/Boot/Core/Inc/: main.h  stm32f7xx_hal_conf.h
stm32f745_prj_gpp/Boot/Core/Src/: main.c
stm32f745_prj_gpp/General/Inc/: git-rev.h  swv.h
stm32f745_prj_gpp/General/Src/: swv.c
stm32f745_prj_gpp/cmake/: stm32f745.cmake
